<resources>
    <string name="app_name">beta</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="travel_stories">Travel Stories</string>
    <string name="login_btn">LOGIN</string>
    <string name="login_button_text">LOGIN</string>
    <string name="login_prompt">Please Login or Register</string>
    <string name="settings_btn">Settings</string>
    <string name="enterBtn">ENTER</string>
    <string name="logout_button_text">LOGOUT</string>
    <string name="login_unsuccessful_msg">Login unsuccessful</string>
    <string name="oasis_logo">Oasis logo</string>
    <string name="user_name">User Name</string>
    <string name="profile_settings_preference_question">What is your profile settings preference?</string>
    <string name="travel_preferences">Travel Preferences</string>
    <string name="my_oasis_circle">My Oasis Circle</string>
    <string name="my_recent_pins">My Recent Pins</string>
    <string name="my_oasis_story">My Oasis Story</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="posted_image">Posted Image</string>
    <string name="photo">photo</string>
    <string name="destination_image">destination image</string>
    <string name="hello">Hello</string>
    <string name="save">SAVE</string>
    <string name="email_address">Email Address</string>
    <string name="settings">Settings</string>
    <string name="make_public_profile">Make Profile Public</string>
    <string name="home_navigation">Home Navigation</string>
    <string name="pin_it_navigation">Pin It Navigation</string>
    <string name="profile_navigation">Profile Navigation</string>
    <string name="settings_navigation">Settings Navigation</string>
    <string name="photos">Photos</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="top_3_favorite_destinations">TOP 3 FAVORITE DESTINATIONS</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyC5GdpvQzQmGy8Ll6B9EuDq-IPY3IAY7YE</string>
    <string name="normal_map">normal map</string>
    <string name="hybrid_map">hybrid map</string>
    <string name="satellite_map">satellite map</string>
    <string name="terrain_map">terrain map</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="poi">poi</string>
    <string name="pin_it">Pin It</string>
    <string name="upload_it">Upload It</string>
    <string name="destination_name">Destination Name</string>
    <string name="capture">CAPTURE</string>
    <string name="gallery">GALLERY</string>
    <string name="travel_album">Travel Album</string>
    <string name="inspiration">INSPIRATION</string>
    <string name="no_photos">No Photos</string>
    <string name="travel_album_photo">travel album photo</string>
    <string name="title_activity_maps">title activity maps</string>
    <string name="user_image">user image</string>
    <string name="username">Username</string>
    <string name="upload">UPLOAD</string>
</resources>