<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".profile.ProfileFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:backgroundTint="@color/background"
        android:padding="8dp"
        android:paddingBottom="30dp">

        <com.agrawalsuneet.dotsloader.loaders.LazyLoader
            android:id="@+id/dotLoader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.398"
            app:lazyloader_animDur="400"
            app:lazyloader_dotsDist="10dp"
            app:lazyloader_dotsRadius="10dp"
            app:lazyloader_firstDelayDur="150"
            app:lazyloader_firstDotColor="@color/brand_color"
            app:lazyloader_interpolator="@android:anim/decelerate_interpolator"
            app:lazyloader_secondDelayDur="300"
            app:lazyloader_secondDotColor="@color/brand_color"
            app:lazyloader_thirdDotColor="@color/brand_color">


        </com.agrawalsuneet.dotsloader.loaders.LazyLoader>

        <ImageView
            android:id="@+id/imageForAlbum"
            android:layout_width="418dp"
            android:layout_height="421dp"
            android:contentDescription="@string/travel_album_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.416"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <Button
            android:id="@+id/captureImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="76dp"
            android:backgroundTint="@color/brand_color"
            android:elevation="10dp"
            android:outlineAmbientShadowColor="@color/teal_200"
            android:text="@string/capture"
            android:textColor="#212121"
            android:textSize="16sp"
            app:borderWidth="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/selectImageFromGallery"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:targetApi="p" />

        <Button
            android:id="@+id/selectImageFromGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="57dp"
            android:layout_marginBottom="76dp"
            android:backgroundTint="@color/brand_color"
            android:elevation="10dp"
            android:outlineAmbientShadowColor="@color/teal_200"
            android:text="@string/gallery"
            android:textColor="#212121"
            android:textSize="16sp"
            app:borderWidth="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/captureImage"
            app:tint="@color/brand_color"
            tools:targetApi="p" />

        <Button
            android:id="@+id/uploadImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="128dp"
            android:backgroundTint="@color/brand_color"
            android:elevation="10dp"
            android:outlineAmbientShadowColor="@color/teal_200"
            android:text="@string/upload"
            android:textColor="#212121"
            android:textSize="16sp"
            app:borderWidth="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.535"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/brand_color"
            tools:targetApi="p" />

        <Button
            android:id="@+id/travelAlbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="27dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/brand_color"
            android:outlineAmbientShadowColor="@color/brand_color"
            android:outlineSpotShadowColor="@color/teal_700"
            android:text="@string/travel_album"
            android:textColor="#212121"
            android:textSize="16sp"
            app:borderWidth="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/inspiration"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/brand_color"
            tools:targetApi="p" />

        <Button
            android:id="@+id/inspiration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="232dp"
            android:backgroundTint="@color/brand_color"
            android:outlineAmbientShadowColor="@color/brand_color"
            android:outlineSpotShadowColor="@color/teal_700"
            android:text="@string/inspiration"
            android:textColor="#212121"
            android:textSize="16sp"
            app:borderWidth="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/travelAlbum"
            app:tint="@color/brand_color"
            tools:targetApi="p" />

        <ImageView
            android:id="@+id/settings"
            android:layout_width="40dp"
            android:layout_height="27dp"
            android:contentDescription="@string/settings"
            android:src="@drawable/settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.983"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022"
            tools:src="@tools:sample/avatars" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:visibility="visible"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.056"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/person_pin_filled" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>